--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
              </div>
          <div id="surroundingNumbersOutput" style="margin-top: 15px; font-size: 0.9em;">
             </div>
+	<div style="margin-top: 15px;">
+            <h3>Possible Corner Bets:</h3>
+            <div id="cornerBetsOutput" style="font-size: 0.9em; color: #333;">
+                            </div>
+            </div>
 
         <div style="margin-top: 20px;">
             <h3>History:</h3>
